--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,3 +9,9 @@ Merge PR from https://github.com/czalaviek: New handling button signals - now pl
 
 V2.2 2016/04/15
 Layer properties not keeped issue fix (native setDataSource method issue)
+
+V2.3 2017/06/19
+"Unhandled layers uncaught behaviour" issue fix
+
+V2.4 2017/07/26
+"Extent doesn't change applying new datasource to a raster layer" issue fixed
