--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -15,3 +15,6 @@ V2.3 2017/06/19
 
 V2.4 2017/07/26
 "Extent doesn't change applying new datasource to a raster layer" issue fixed
+
+V2.4 2018/09/01
+QGIS3 migration; courtesy of Christoph Franke @ChrFr
